# spoton_backend

./: .dockerignore  .env.cpu  .env.example  .env.gpu  .env.local.example  .gitignore  CLAUDE.md  DATASET.md  DESIGN.md  DETECTION.md  Dockerfile  Dockerfile.cpu  Dockerfile.gpu  FRONTEND_INTEGRATION_GUIDE.md  FrontendGuideline.md  Microsoft.backup  NEW_MICROSOFT.md  PLANNING.md  PROGRESS.md  README.md  REMOVE.md  WEBSOCKET_RACE_FIX_SUMMARY.md  backend_test_cases.md  debug_projection_border.py  debug_projection_edge.py  debug_spatial_logic.py  docker-compose.cpu.yml  docker-compose.development.yml  docker-compose.gpu.yml  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.yml  download_s3_video.py  final_metrics_table.md  frontend_simulation_client.py  gt_reid  hack_build.ps1  hack_build.sh  package-lock.json  paper_latency_table.md  (+12 more)
.github/workflows/: ci.yml  test.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  development_commands.md  project_overview.md
alembic/: env.py
alembic/versions/: 1752941c6129_initial_migration.py  4021e4e63a60_initial_migration.py  8f47df0a815f_add_reid_feedback_table.py
app/: common_types.py  dependencies.py  main.py
app/api/: health.py  websockets.py
app/api/v1/: schemas.py  visualization_schemas.py
app/api/websockets/: __init__.py  analytics_handler.py  connection_manager.py  endpoints.py  focus_handler.py  frame_handler.py  status_handler.py  (+1 more)
app/core/: config.py  config_compatibility.py  config_consolidated.py  config_validator.py  database.py  dependencies.py  event_handlers.py  model_migration.py  new_dependencies.py  redis_client.py  security_config.py
app/domains/: __init__.py
app/infrastructure/: __init__.py
app/middleware/: frontend_data_formatter.py
app/models/: base_models.py  detectors.py  feature_extractors.py  rtdetr_detector.py  trackers.py  yolo_detector.py
app/orchestration/: __init__.py  camera_manager.py  data_flow_manager.py  feature_integrator.py  pipeline_orchestrator.py  real_time_processor.py  result_aggregator.py
app/services/: advanced_analytics_engine.py  advanced_tracking_service.py  analytics_engine.py  batch_optimization_service.py  behavioral_analysis_service.py  camera_tracker_factory.py  dagshub_s3_service.py  datetime_range_manager.py  detection_video_service.py  enhanced_notification_service.py  environment_configuration_service.py  fast_reid_interface.py  feature_extraction_service.py  global_person_registry.py  ground_truth_reid_service.py  ground_truth_service.py  handoff_detection_service.py  handoff_manager.py  historical_data_service.py  historical_session_manager.py  homography_service.py  horizontal_scaling_service.py  memory_manager.py  model_quantization_service.py  monitoring_service.py  movement_path_visualization_service.py  multi_camera_frame_processor.py  multi_environment_data_manager.py  network_optimizer.py  notification_service.py  performance_monitor.py  pipeline_orchestrator.py  playback_control_service.py  playback_service.py  playback_status_store.py  raw_video_service.py  reid_components.py  space_based_matcher.py  task_runtime_registry.py  temporal_query_engine.py  (+7 more)
app/shared/: __init__.py  types.py
app/tracing/: __init__.py  analytics_events.py
app/utils/: asset_downloader.py  detection_annotator.py  device_utils.py  error_handler.py  homography_utlis.py  memory_manager.py  metrics_collector.py  mjpeg_streamer.py  mock_analytics_data.py  video_processing.py
calibration_tool/: PLAN.md  README.md  main.py  pyproject.toml
calibration_tool/app/: main.py
calibration_tool/assets/: ground_plane.json
calibration_tool/docs/: test_cases.md
config/: development.yaml  postgresql.conf  production.yaml  redis.conf  staging.yaml
config/environments/: campus.json  factory.json
docs/: DETECTION_OPTIMIZATION_GUIDE.md  PHASE11_IMPLEMENTATION.md  PRODUCTION_DEPLOYMENT_GUIDE.md
homography_data/: camera_overlap_config.json  factory.json  homography_20251024-103317.json
poc/: docker-compose.gpu.yml  docker-compose.yml  poc_detection.py
requirements/: requirements.txt
scripts/: README.md  apply_geometric_metrics_migration.py  compute_map.py  deploy.sh  evaluate_all.py  evaluate_baseline.py  evaluate_mot.py  evaluate_mot_reid.py  export_rtdetr_tensorrt.py  export_yolo_tensorrt.py  generate_paper_metrics.py  install_gpu_deps.sh  run_evals.py  run_tests.py  seed_mock_advanced_analytics.py  setup_database_local.sql  setup_db.py  setup_local_environment.bat  setup_local_environment.ps1  setup_local_environment.sh  setup_local_environment_simple.bat  setup_redis_local.conf  setup_windows_cuda.ps1  start.sh  start_backend_local.bat  start_backend_local.sh  start_redis_local.sh  stop_local_services.bat  stop_local_services.sh  test_gt_load.py  validate_imports.py  validate_local_setup.py  websocket_client_test.py
tests/: __init__.py  conftest.py  run_phase11_tests.py  test_comprehensive_api.py  test_data_ingestion.py  test_detection_simple.py  test_global_registry.py  test_ground_truth_mode.py  test_handoff_logic_verification.py  test_integration.py  test_performance.py  test_performance_metrics.py  test_phase11_e2e.py  test_phase2_integration.py  test_phase4_spatial_intelligence.py  test_reid_components.py  test_security.py  test_security_hardening.py  test_single_tab_enforcement.py  test_trivial_100.py
tests/api/: __init__.py  test_websockets.py
tests/core/: __init__.py  test_event_handlers.py
tests/fixtures/: test_fixtures.py
tests/integration/: test_validation_runner.py
tests/models/: __init__.py  test_detectors.py  test_feature_extractors.py  test_rtdetr_detector.py  test_rtdetr_detector_phase1.py  test_trackers.py
tests/services/: __init__.py  test_camera_tracker_factory.py  test_homography_service.py  test_multi_camera_frame_processor.py  test_notification_service.py  test_reid_components.py  test_video_data_manager_service.py
tests/utils/: __init__.py  test_asset_downloader.py  test_device_utils.py  test_homography_utlis.py  test_video_processing.py
videos/: README.md
weights/: note.txt
(+186 files in other folders)
