[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spoton_backend"
version = "0.1.0"
description = "Backend for the Intelligent Multi-Camera Person Tracking and Analytics System (SpotOn)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "SpotOn", email = "Jwizzed@outlook.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

dependencies = [
    "fastapi>=0.110.0,<0.111.0",
    "uvicorn[standard]>=0.29.0,<0.30.0",
    "pydantic>=2.7.0,<2.8.0",
    "pydantic-settings>=2.2.0,<2.3.0",
    "redis[hiredis]>=5.0.5,<5.1.0",
    "psycopg2-binary>=2.9.9,<2.10.0",
    # "aiobotocore>=2.13.0,<2.14.0", # Replaced by dagshub for S3-like access
    "dagshub>=0.3.0,<0.4.0", # For DagsHub S3-like access
    "boto3>=1.34.0,<1.35.0", # DagsHub client might use boto3, ensure it's available
    "numpy>=1.26.4,<1.27.0",
    "opencv-python-headless>=4.9.0.80,<4.10.0.0",
    "boxmot>=10.0.41,<10.1.0",
    "torch>=2.2.0,<2.3.0",
    "torchvision>=0.17.0,<0.18.0",
    "torchaudio>=2.2.0,<2.3.0",
    "loguru>=0.7.2,<0.8.0",
    "httpx>=0.27.0,<0.28.0",
]

[project.urls]
Homepage = "https://github.com/JubJones/spoton_backend"
Repository = "https://github.com/JubJones/spoton_backend"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0,<8.3.0",
    "pytest-asyncio>=0.23.0,<0.24.0",
    "ruff>=0.4.2,<0.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py39"
select = [
    "E", "W", "F", "I", "UP", "C90", "N", "D", "ANN", "BLE", "B", "A", "RUF",
]
ignore = [
    "D203", "D212",
    # "ANN101", "ANN102", # Allow for now, can be enabled for stricter typing
    "ANN401", # Allow Any types for now where Pydantic or external libs use them
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"