[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "spoton_backend"
version = "0.1.0"
description = "Backend for the Intelligent Multi-Camera Person Tracking and Analytics System (SpotOn)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "SpotOn", email = "Jwizzed@outlook.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "fastapi>=0.110.0,<0.111.0",
    "uvicorn[standard]>=0.29.0,<0.30.0",
    "websockets>=10.0,<13.0",
    "pydantic>=2.7.0,<2.8.0",
    "pydantic-settings>=2.2.0,<2.3.0",
    "redis[hiredis]>=5.0.5,<5.1.0",
    "psycopg2-binary>=2.9.9,<2.10.0",
    "dagshub>=0.3.0,<0.4.0",
    "boto3>=1.34.0,<1.35.0",
    "numpy>=1.26.4,<1.27.0",
    "opencv-python-headless>=4.9.0.80,<4.10.0.0",
    "boxmot>=12.0.5",
    "torch>=2.2.0,<2.3.0",
    "torchvision>=0.17.0,<0.18.0",
    "torchaudio>=2.2.0,<2.3.0",
    "loguru>=0.7.2,<0.8.0",
    "httpx>=0.27.0,<0.28.0",
    "setuptools>=60.0.0",
    "cython>=0.29.0,<0.30.0", # Often a build dep for others like faiss
    "pip>=23.0,<25.0",
    "faiss-cpu>=1.7.4,<1.8.0", # CPU version of FAISS (default)
    "transformers>=4.36.0,<4.37.0", # For CLIP model support
    "clip-by-openai>=1.0", # OpenAI CLIP implementation
    "accelerate>=0.24.0,<0.25.0", # For GPU acceleration
    "scipy>=1.11.0,<1.12.0", # Required for advanced similarity calculations
    "ultralytics>=8.0.0,<8.1.0", # YOLOv8 implementation
]
[project.urls]
Homepage = "https://github.com/JubJones/spoton_backend"
Repository = "https://github.com/JubJones/spoton_backend"
[project.optional-dependencies]
dev = [
    "pytest>=8.2.0,<8.3.0",
    "pytest-asyncio>=0.23.0,<0.24.0",
    "pytest-mock>=3.12.0,<3.13.0",
    "ruff>=0.4.2,<0.5.0",
]
gpu = [
    "faiss-gpu>=1.7.4,<1.8.0", # GPU version of FAISS (requires CUDA)
    "torch>=2.2.0+cu121", # PyTorch with CUDA 12.1 support
    "torchvision>=0.17.0+cu121", # TorchVision with CUDA 12.1 support
    "torchaudio>=2.2.0+cu121", # TorchAudio with CUDA 12.1 support
]
cpu = [
    "faiss-cpu>=1.7.4,<1.8.0", # CPU version of FAISS
    "torch>=2.2.0", # PyTorch CPU version
    "torchvision>=0.17.0", # TorchVision CPU version
    "torchaudio>=2.2.0", # TorchAudio CPU version
]
[tool.hatch.build.targets.wheel]
packages = ["app"]
[tool.ruff]
line-length = 88
target-version = "py39"
select = [
    "E", "W", "F", "I", "UP", "C90", "N", "D", "ANN", "BLE", "B", "A", "RUF",
]
ignore = [ "D203", "D212", "ANN401"]
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
[tool.ruff.lint.pydocstyle]
convention = "google"
[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"